# DAHTN_FIRMWARE

./: AGENTS.md  Báo cáo đồ án thiết kế mạch điện tử_Đã chỉnh sửa.md  CMakeLists.txt  MÔ TẢ PHẦN MỀM HỆ THỐNG ESP32 mới .md  partitions_8mb.csv  ôn tap.md
build_fresh/: .bin_timestamp  .ninja_deps  .ninja_log  app-flash_args  config.env  flash_args  flasher_args.json  kconfigs.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_fresh/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build_fresh/bootloader-prefix/src/bootloader-stamp/: bootloader-source_dirinfo.txt
build_fresh/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_fresh/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_fresh/bootloader/gdbinit/: gdbinit  symbols
build_fresh/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_fresh/gdbinit/: gdbinit  symbols
cloud/: cloud.c  cloud.h  cloud_command.c  cloud_config.c  cloud_http.c  cloud_internal.h  cloud_report.c
cmake/: windows-c-rules-override.cmake
main/: CMakeLists.txt  config.h  globals.c  globals.h  globals_session.c  globals_session.h  main.c  nvs_manager.c  nvs_manager.h  ota.c  ota.h  ota_firebase.c  ota_firebase.h  relay.c  relay.h  safety.c  safety.h  sensor.c  sensor.h  types.h  ui.c  ui.h
tools/: evion-ar-wrapper.cmd  evion-ar-wrapper.ps1  idf-build-patched.ps1  patch-ar-rules.ps1
wifi/: dns_server.c  dns_server.h  wifi.c  wifi.h  wifi_internal.h  wifi_portal.c
(+1 files in other folders)
